--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta property="og:site_name" content="The Useless Web"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:description" content="The Useless Web Button... just press it and find where it takes you."/>
-		<meta property="og:image" content="https://theuselessweb.com/share-image-large.png"/>
+		<meta property="og:image" content="share-image-large.png"/>
 
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image">
